<?xml version="1.0"?>
<package>
  <name>evarobot_slam</name>
  <version>0.0.7</version>
  <description>evarobot_slam provides roslaunch scripts for SLAM map building with the Evarobot.</description>

  <author>Mehmet Akcakoca</author>
  <maintainer email="akcakocamehmet@gmail.com">Mehmet Akcakoca</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/evarobot_slam</url>
  <url type="repository">https://github.com/inomuh/evarobot</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>gmapping</run_depend>
</package>
